[ch12484] Fix overlapping lines on textarea

--- a/packages/portal-style/src/components/_forms.scss
+++ b/packages/portal-style/src/components/_forms.scss
@@ -517,7 +517,7 @@ select.form-control:not([multiple="multiple"]) {
 }
 
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .form-control {
+  input[type=text].form-control {
     line-height: 10px;
     padding-top: 10px;
     padding-bottom: 9px;
